# apt-proof-of-concept

./: .env.template  .gitignore  ACCURACY_IMPROVEMENT_SUMMARY.md  BODYFAT_IMPROVEMENTS.md  BODY_COMPOSITION_ACCURACY_IMPROVEMENTS.md  CONSOLIDATION_SUMMARY.md  CV_IMPROVEMENTS_SUMMARY.md  FITNESS_README.md  PERFORMANCE_OPTIMIZATION.md  QUICK_START.md  README.md  RESTRUCTURE_SUMMARY.md  accuracy_validation_results.json  ai_models.py  ai_processor.py  app.py  app_with_ai.py  body_composition_analyzer.py  body_composition_api.py  body_composition_demo.py  body_composition_ui.py  cleanup_fitness.bat  config.py  database.py  debug_arnold_test.py  debug_body_fat.py  debug_body_fat_detailed.py  debug_info.json  debug_measurements.py  docker-compose.yml  enhanced_recommendation_system.py  enhanced_ui.py  fitness_app.py  fitness_app_enhanced.py  fitness_data.json  frontend.py  llm.txt  main.py  models.py  progress_analytics.py  (+28 more)
.streamlit/: config.toml
docs/: BODY_COMPOSITION_ACCURACY_IMPROVEMENTS.md  ENHANCED_CV_IMPROVEMENTS.md
legacy/: BODY_COMPOSITION_README.md  ENHANCED_README.md  ENHANCED_WORKOUT_PLANNER_README.md  FITNESS_README.md  IMPROVEMENTS_SUMMARY.md  QUICK_START.md  README_UV.md  app.py  cleanup_fitness.py  enhanced_exercise_database.py  enhanced_progress_tracking.py  enhanced_recommendation_system.py  enhanced_ui.py  models.py  nutrition_planner.py  recipe_database.py  run-app.bat  run_enhanced_app.bat  run_fitness_app.py  setup_fitness_app.bat  setup_fitness_app.ps1  social_features.py  ui_components.py  utils.py  workout_planner.py
scripts/: migrate.py  setup.py
src/apt_fitness/: __init__.py
src/apt_fitness/analyzers/: __init__.py  body_composition.py
src/apt_fitness/core/: __init__.py  config.py  models.py
src/apt_fitness/data/: __init__.py  database.py
src/apt_fitness/engines/: __init__.py  recommendation.py
src/apt_fitness/ui/: __init__.py  components.py
src/apt_fitness/utils/: __init__.py  helpers.py
tests/: test_main.py
tests/female average/: measurements.json
tests/female overweight/: measurements.json
tests/female overweight +/: measurements.json
tests/female underweight/: measurements.json
tests/male average/: measurements_male_average.json
tests/male overweight/: measurements.json
tests/male underweight/: measurements.json
