[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apt-fitness-assistant"
version = "3.0.0"
description = "AI Fitness Assistant - Advanced Pose Tracking (APT) Proof of Concept"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "APT Research Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    # Core web framework
    "streamlit>=1.29.0",
    
    # Computer vision and AI
    "opencv-python>=4.9.0.80",
    "mediapipe>=0.10.9",
    "numpy>=1.26.2",
    "pillow>=10.1.0",
    
    # Data analysis and visualization
    "pandas>=2.1.4",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "scikit-learn>=1.3.2",
    
    # Deep learning
    "tensorflow>=2.15.0,<2.17.0",
    "keras>=2.15.0",
    "scipy>=1.10.0",
    
    # Image processing
    "albumentations>=1.3.0",
    "imagehash>=4.3.0",
    "opencv-contrib-python>=4.8.0",
    "imageio>=2.31.0",
    "scikit-image>=0.21.0",
    
    # Web API
    "flask>=2.3.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-cors>=4.0.0",
    "werkzeug>=2.3.0",
    
    # Utilities
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
fitness-app = "app:main"

[project.urls]
Homepage = "https://github.com/alphareum/apt-proof-of-concept"
Repository = "https://github.com/alphareum/apt-proof-of-concept"
Issues = "https://github.com/alphareum/apt-proof-of-concept/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
